--- a/assets/style.css
+++ b/assets/style.css
@@ -58,11 +58,14 @@ textarea{
 }
 
 .saveBtn {
+  border: none;
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  width: 100%;
+  height: 100%;
 }
 
 .saveBtn i:hover {
