--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,8 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  width: 100%;
+  height: 100%;
 }
 
 .jumbotron {
@@ -43,18 +45,18 @@ textarea{
 }
 
 .past {
-  background-color: #d3d3d3;
-  color: white;
+  background-color: #ffa07a;
+  color: #8b0000;
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+  background-color: #77dd77;
+  color: black;
 }
 
 .future {
-  background-color: #77dd77;
-  color: white;
+  background-color: #add8e6;
+  color: black;
 }
 
 .saveBtn {
